# DesignCLI

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/dcli-cli/: Cargo.toml
crates/dcli-cli/src/: client.rs  dispatch.rs  dto.rs  dxpkg.rs  lib.rs  main.rs  output.rs  storage.rs
crates/dcli-cli/tests/: cli.rs
crates/dcli-color/: Cargo.toml
crates/dcli-color/src/: lib.rs
crates/dcli-daemon/: Cargo.toml
crates/dcli-daemon/src/: main.rs  routes.rs  state.rs  terminal.rs
crates/dcli-gpu/: Cargo.toml
crates/dcli-gpu/shaders/: blend.wgsl
crates/dcli-gpu/src/: lib.rs
crates/dcli-mcp/: Cargo.toml
crates/dcli-mcp/src/: lib.rs  main.rs  server.rs  session.rs  snapshot.rs
crates/dcli-model/: Cargo.toml
crates/dcli-model/src/: fixtures.rs  history.rs  lib.rs  op.rs
crates/dcli-psd/: Cargo.toml
crates/dcli-psd/src/: export.rs  import.rs  lib.rs
crates/dcli-raster/: Cargo.toml
crates/dcli-raster/src/: lib.rs  shapes.rs  sysfonts.rs  text.rs
crates/dcli-shell-native/: Cargo.toml
crates/dcli-shell-native/src/: app.rs  main.rs
crates/dcli-shell-native/tests/: invariants.rs
crates/dcli-tile/: Cargo.toml
crates/dcli-tile/src/: lib.rs
crates/dcli-wasm/: Cargo.toml
crates/dcli-wasm/src/: lib.rs
design-assets/: README.md
design-assets/card-news/: README.md
docs/: agent-system-prompt.md
dx-web/: README.md  bench_composite.mjs  bench_heavy.mjs  index.html  perf.html  render_scene.mjs  repro_reject.mjs  smoke.html  verify_fixes.mjs  verify_wasm.mjs
dx-web/scripts/: build-wasm.sh
dx-web/src/: app.js  bridge.js  components.js  dashboard.js  live.js  main.js
examples/parity_spike/: Cargo.toml  main.rs  preview.rs
examples/parity_spike/tests/: parity.rs
scripts/: check.sh  seed-project-agents.sh
templates/project/: AGENTS.md
