[workspace]
resolver = "2"
members = [
    "crates/dcli-color",
    "crates/dcli-tile",
    "crates/dcli-model",
    "crates/dcli-raster",
    "crates/dcli-gpu",
    "crates/dcli-cli",
    "crates/dcli-shell-native",
    "crates/dcli-mcp",
    "crates/dcli-wasm",
    "crates/dcli-daemon",
    "crates/dcli-psd",
    "examples/parity_spike",
]
# dcli-wasmмқҖ cdylib(wasm32 м „мҡ©) вҶ’ кё°ліё л№Ңл“ң/н…ҢмҠӨнҠём—җм„ң м ңмҷё.
# cargo build/testк°Җ wasm cdylibлҘј л„ӨмқҙнӢ°лёҢлЎң л№Ңл“ң мӢңлҸ„н•ҳм§Җ м•ҠкІҢ н•ңлӢӨ.
# dcli-wasmмқҖ wasm-pack(--target wasm32)лЎңл§Ң л№Ңл“ң.
default-members = [
    "crates/dcli-color",
    "crates/dcli-tile",
    "crates/dcli-model",
    "crates/dcli-raster",
    "crates/dcli-gpu",
    "crates/dcli-cli",
    "crates/dcli-shell-native",
    "crates/dcli-mcp",
    "crates/dcli-daemon",
    "crates/dcli-psd",
    "examples/parity_spike",
]

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

# wgpu лІ„м „мқҖ лӢЁмқј м¶ңмІҳлЎң н•Җ(мҪ”м–ҙ/м…ё/iced м¶©лҸҢ л°©м§Җ к·ңмңЁ, implementation-plan.md).
[workspace.dependencies]
dcli-color = { path = "crates/dcli-color" }
dcli-tile = { path = "crates/dcli-tile" }
dcli-model = { path = "crates/dcli-model" }
dcli-raster = { path = "crates/dcli-raster" }
dcli-gpu = { path = "crates/dcli-gpu" }
dcli-psd = { path = "crates/dcli-psd" }
# default-features=false вҶ’ мҶҢл№„мһҗк°Җ н•„мҡ” feature лӘ…мӢң(wasmмқҖ fs-sources/cli л‘ҳ лӢӨ лҒ”).
dcli-cli = { path = "crates/dcli-cli", default-features = false }

wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
png = "0.17"
flate2 = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.28", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.28"
schemars = "1"
base64 = "0.22"
rmcp = { version = "1", default-features = false, features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "io-std", "sync"] }
# daemon(dx-daemon)мҡ© мӣ№ мҠӨнғқ. daemon crateл§Ң мӮ¬мҡ© вҖ” мҪ”м–ҙ/CLI/wasm л№Ңл“ңм—” л¬ҙмҳҒн–Ҙ.
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
# CLI --server лӘЁл“ңмҡ© лҸҷкё° HTTP нҒҙлқј(мһ‘кі  blocking вҖ” лӢЁл°ң CLIм—җ м Ғн•©). rustlsлЎң vendored openssl нҡҢн”ј.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
tracing = "0.1"
# PSD import м „мҡ©(read). exportлҠ” dcli-psdк°Җ мҶҗмҲҳ мқёмҪ”л”©(м“°кё° нҒ¬л ҲмқҙнҠё м—ҶмқҢ).
psd = "0.3"
# н…ҚмҠӨнҠё лһҳмҠӨн„°лқјмқҙм Җ(dcli-raster) вҖ” мҲңмҲҳ Rust, wasm нҳёнҷҳ. нҸ°нҠёлҠ” Pretendard(OFL) лІҲл“Ө.
ab_glyph = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[profile.release]
opt-level = 3
lto = "thin"
