[workspace]
resolver = "2"
members = [
    "crates/dcli-color",
    "crates/dcli-tile",
    "crates/dcli-model",
    "crates/dcli-raster",
    "crates/dcli-gpu",
    "crates/dcli-cli",
    "crates/dcli-shell-native",
    "crates/dcli-mcp",
    "crates/dcli-wasm",
    "crates/dcli-daemon",
    "crates/dcli-psd",
    "examples/parity_spike",
]
# dcli-wasm은 cdylib(wasm32 전용) → 기본 빌드/테스트에서 제외.
# cargo build/test가 wasm cdylib를 네이티브로 빌드 시도하지 않게 한다.
# dcli-wasm은 wasm-pack(--target wasm32)로만 빌드.
default-members = [
    "crates/dcli-color",
    "crates/dcli-tile",
    "crates/dcli-model",
    "crates/dcli-raster",
    "crates/dcli-gpu",
    "crates/dcli-cli",
    "crates/dcli-shell-native",
    "crates/dcli-mcp",
    "crates/dcli-daemon",
    "crates/dcli-psd",
    "examples/parity_spike",
]

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT OR Apache-2.0"
rust-version = "1.89"

# wgpu 버전은 단일 출처로 핀(코어/셸/iced 충돌 방지 규율, implementation-plan.md).
[workspace.dependencies]
dcli-color = { path = "crates/dcli-color" }
dcli-tile = { path = "crates/dcli-tile" }
dcli-model = { path = "crates/dcli-model" }
dcli-raster = { path = "crates/dcli-raster" }
dcli-gpu = { path = "crates/dcli-gpu" }
dcli-psd = { path = "crates/dcli-psd" }
# default-features=false → 소비자가 필요 feature 명시(wasm은 fs-sources/cli 둘 다 끔).
dcli-cli = { path = "crates/dcli-cli", default-features = false }

wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
png = "0.17"
flate2 = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.28", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.28"
schemars = "1"
base64 = "0.22"
futures-util = "0.3"
libc = "0.2"
rmcp = { version = "1", default-features = false, features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "io-std", "sync"] }
# daemon(dx-daemon)용 웹 스택. daemon crate만 사용 — 코어/CLI/wasm 빌드엔 무영향.
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
# CLI --server 모드용 동기 HTTP 클라(작고 blocking — 단발 CLI에 적합). rustls로 vendored openssl 회피.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
tracing = "0.1"
# PSD import 전용(read). export는 dcli-psd가 손수 인코딩(쓰기 크레이트 없음).
psd = "0.3"
# 텍스트 래스터라이저(dcli-raster) — 순수 Rust, wasm 호환. 폰트는 Pretendard(OFL) 번들.
ab_glyph = "0.2"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[profile.release]
opt-level = 3
lto = "thin"
