[package]
name = "parity_spike"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "parity_spike"
path = "main.rs"

[dependencies]
dcli-color.workspace = true
dcli-tile.workspace = true
dcli-model.workspace = true
dcli-raster.workspace = true
dcli-gpu.workspace = true
png.workspace = true
anyhow.workspace = true

# 프리뷰 창 전용(코어 아님). 코어 UI-무의존 불변식을 지키기 위해 example에만 둔다.
eframe.workspace = true
egui.workspace = true
